<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/article_image"
                android:src="@drawable/insertimage"
                android:adjustViewBounds="true"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="5dp"
                android:fontFamily="@font/rubik"
                android:hint="@string/articleName"
                android:background="@drawable/edittext_background"
                android:id="@+id/name_of_article"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/rubik"
                android:background="@drawable/edittext_background"
                android:padding="5dp"
                android:hint="@string/articleContent"
                android:id="@+id/name_of_content"
                />

            <RadioGroup
                android:id="@+id/article_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mediaDisc">

                <RadioButton
                    android:id="@+id/article_private_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/privatepost"
                    android:buttonTint="@color/red"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/article_public_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="true"
                    android:buttonTint="@color/red"
                    android:text="@string/publicpost"
                    android:textAlignment="center" />
            </RadioGroup>
            <TextView
                android:id="@+id/category_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/rubik"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/spinnerName"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_m"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/publish_article_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/rubik"
                android:background="@drawable/background_login_button"
                android:text="@string/publish" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>