<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMediaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <VideoView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/img_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/media"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/img_btn"
                app:srcCompat="@drawable/insertimage" />

            <Button
                android:id="@+id/img_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="Image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/media" />

            <Button
                android:id="@+id/video_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="Video"
                app:layout_constraintStart_toEndOf="@+id/img_btn"
                app:layout_constraintTop_toBottomOf="@+id/media" />

            <EditText
                android:id="@+id/media_disc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/rubik"
                android:hint="@string/description"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_btn" />


            <TextView
                android:id="@+id/ctg_m_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/rubik"
                android:text="@string/spinnerName"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/media_radio_group" />

            <Spinner
                android:id="@+id/spinner_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                app:layout_constraintStart_toEndOf="@+id/ctg_m_txt"
                app:layout_constraintTop_toBottomOf="@+id/media_radio_group" />

            <Button
                android:id="@+id/publish_media_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/background_login_button"
                android:fontFamily="@font/rubik"
                android:text="@string/publish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ctg_m_txt" />

        <RadioGroup
            android:id="@+id/media_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/media_disc">

            <RadioButton
                android:id="@+id/media_private_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/red"

                android:text="@string/privatepost"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/media_public_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:buttonTint="@color/red"
                android:checked="true"
                android:text="@string/publicpost"
                android:textAlignment="center" />
        </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>